Changelog

0.6

	* New game mode: Challenges
	* Add i18n support

0.51

	* Fixed a mission loading bug on Linux.

0.5

	* Added capital ships
	* Added a number of new missions
	* Added Mag cannon training mission, at Sol
	* Star systems can be fall to the Pandorans (campaign related, unavoidable)
	* New craft: the Lynx, a UNF bomber, and supply craft (non-aggressive, avoid combat)
	* Added new music and sound effects
	* Added debris effect when fighters are destroyed
	* Added keyboard alternatives to some mouse controls
	* Added icons to HUD system, to help identify abilities and meters
	* Misc. AI, mission, and bug fixes

0.4
	
	* Added mouse + keyboard controls (replaces keyboard-only method)
	* Added new craft: Kingfisher, Mantis, Rook, Hammerhead, Khepri, Scarab, Thunderhead.
	* Added laser cannon - highly effective against shields
	* Tweaks to AI system, to make the game easier, use laser cannons, and updates for Shuttles and Tugs
	* Added several new missions
	* Added rockets - straight-firing missiles, that don't home in. Bombers (Hammerhead, Khepri, and Scarab) have unlimited rockets
	* New AI flags to tell craft to avoid combat all together, or to mostly avoid it.
	* Messages boxes are now shown during missions, to give the player more information
	* All craft have had their armour and shield ratings doubled, to make battles last longer
	* Added remote rocket turrets
	* Added ECM training mission
	* Added Windows makefile
	* Added Linux and Windows binary build scripts

0.3

	* Added a few new missions.
	* Added new stats.
	* Flash health and shield bars when under 25%.
	* Show warning message and play sound when a missile is launched, targetting the player.
	* Added Boost and ECM abilities for player.
	* Fixed a bug which messed up the config file saving.
	* Added civilian rescue missions.
	* New craft: Tug and Shuttle.
	* Toned down the AI a bit, to make the battle less difficult and frantic.