@@ -28,7 +28,6 @@ extern void retreatEnemies(void);
 extern char *getTranslatedString(char *string);
 extern char *getLookupName(char *prefix, long num);
 extern char *timeToString(long millis, int showHours);
-extern int getPercent(float current, float total);
 extern void updateAccuracyStats(unsigned int *stats);
 extern char *timeToString(long millis, int showHours);
 
