@@ -2,6 +2,7 @@ Changelog
 
 0.6
 
+	* Added control remapping
 	* New game mode: Challenges
 	* Add i18n support
 
